--- a/src/test/java/testData/defaultTariffs.yml
+++ b/src/test/java/testData/defaultTariffs.yml
@@ -1,10 +1,11 @@
-tariffs:
-  - id: 1
-    type: "BUSINESS"
-    interestRate: "2%"
-  - id: 2
-    type: "CONSUMER"
-    interestRate: "10%"
-  - id: 3
-    type: "RETIRED"
-    interestRate: "4%"
+GetTariffsResponse:
+  tariffs:
+    - id: 1
+      type: "BUSINESS"
+      interestRate: "2%"
+    - id: 2
+      type: "CONSUMER"
+      interestRate: "10%"
+    - id: 3
+      type: "RETIRED"
+      interestRate: "4%"
