--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,6 @@
             <artifactId>spring-data-jpa</artifactId>
         </dependency>
 
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -167,6 +166,14 @@
                 <configuration>
                     <source>19</source>
                     <target>19</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <reportFormat>plain</reportFormat>
                 </configuration>
             </plugin>
         </plugins>
